--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.css" />
+		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.css" />
 		<link href="styles.css" rel="stylesheet" type="text/css" />
-		<script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
+		<script src="https://code.jquery.com/jquery-1.6.2.min.js"></script>
 		<script src="data.js" type="text/javascript"></script>
 		<script src="javascripts.js" type="text/javascript"></script>
-		<script src="http://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.js"></script>
+		<script src="https://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.js"></script>
 	</head>
 	<body>
 		<div data-role="page" id="home">
@@ -29,7 +29,7 @@
 				</p>
 				<p>
 					All tranlations and photos are from  
-					<a href="http://sanguoshaenglish.blogspot.com/">sanguoshaenglish.blogspot.com</a>.
+					<a href="https://sanguoshaenglish.blogspot.com/">sanguoshaenglish.blogspot.com</a>.
 					Refer to this website for a walkthrough of the rules of SanGuoSha
 					as well as more in-depth analysis of the cards and their relation to the
 					Chinese epic, "Romance of the Three Kingdoms".
